<resources>
    <string name="app_name">MetropolitanoPe</string>
    <string name="title_car">Buses</string>
    <string name="title_maps">Mapa</string>
    <string name="title_info">Info</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ex6">Izaguirre, Independencia, UNI, Estacion Central, Javier Prado, Canaval y Moreira, Angamos, Benavides</string>
    <string name="title_hor">HORARIO</string>
    <string name="title_horario">mañana</string>
    <string name="title_estacion">ESTACIONES</string>
    <string name="title_bus">bus</string>
</resources>
